<resources>
    <string name="app_name">HappyHound_APP</string>
    <string name="login">Login</string>
    <string name="happy_hound">Happy Hound</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="bienvenida">¡Hola! Qué gusto verte de nuevo</string>
    <string name="email">Email</string>
    <string name="email_example">example@email.com</string>
    <string name="contraseña">Contraseña</string>
    <string name="password">·············</string>
    <string name="signUp">CREAR CUENTA</string>
    <string name="opcion">o usa alguno de tus perfiles sociales</string>
    <string name="forgotPassword">¿Olvidaste la Contraseña?</string>
    <string name="facebook">Conectar con Facebook</string>
    <string name="google">Google</string>
    <string name="nombre">Nombre</string>
    <string name="createAccount">Crear una cuenta</string>
    <string name="conditions">Acepto los Términos de servicios y la Política de privacidad.</string>
    <string name="continuar">Continuar</string>
    <string name="have_account">¿Ya tienes una cuenta?</string>
    <string name="nombre_ejemplo">Martin March</string>
    <string name="salir">Salir</string>

    <string name="nombre_perro">Nala</string>
    <string name="edad">Fecha de nacimiento</string>
    <string name="cancelar">Cancelar</string>
    <string name="forgot_password_title">Recuperar Contraseña</string>
    <string name="email_hint">Email</string>
    <string name="reset_password_button_text">Restablecer la Contraseña</string>
    <string name="change_password_button_text">Cambiar la Contraseña</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="forgot_password_icon">Forgot Password Icon</string>
    <string name="btn_back">Volver</string>
    <string name="home_fragment">home</string>
    <string name="add_fragment">Add</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Perfil</string>
    <string name="textview">TextView</string>
    <string name="Informacion">Información</string>

    <string name="logo_app">Logo APP</string>
    <string name="agenda">Agenda</string>
    <string name="perfil">Perfil</string>
    <string name="profile_image">Profile Image</string>
    <string name="tus_datos">Tus Datos</string>
    <string name="settings_image">Settings Image</string>
    <string name="ajustes">Ajustes</string>
    <string name="logout_image">LogOut Image</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="image_add_notification_text">Image of Add Notification Button</string>
    <string name="image_add_pets_text">Image of Add Pets Button</string>
    <string name="galeria">Galería</string>
    <string name="username">Username</string>
    <string name="edit_icon">Edit Icon</string>

    <string-array name="Raza">
        <item>Elige tu raza</item>
        <item>Beagle</item>
        <item>Bichón Frisé</item>
        <item>Border Collie</item>
        <item>Boxer</item>
        <item>Bulldog</item>
        <item>Braco alemán</item>
        <item>Caniche</item>
        <item>Chihuahua</item>
        <item>Dálmata</item>
        <item>Doberman</item>
        <item>Galgo</item>
        <item>Golden Retriever</item>
        <item>Gran danés</item>
        <item>Husky siberiano</item>
        <item>Labrador Retriever</item>
        <item>Pastor Alemán</item>
        <item>Pomerania</item>
        <item>Rottweiler</item>
        <item>Schnauzer</item>
        <item>Weimaraner</item>
        <item>Yorkshire Terrier</item>

    </string-array>

    <string-array name="Sexo">
        <item>Elige el sexo</item>
        <item>Macho</item>
        <item>Hembra</item>

    </string-array>


    <string name="new_credentials">Nueva Contraseña</string>
    <string name="new_credentials_detail">Crea tu nueva contraseña</string>
    <string name="password_updated">Contraseña Actualizada</string>
    <string name="password_updated_success_message">Tu contraseña ha sido actualizada</string>

</resources>