<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/layout"
    android:orientation="vertical">


    <TextView
        android:id="@+id/perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/perfil"
        android:textSize="50sp" />


    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/baseline_profile_24" />

        <Button
            android:id="@+id/datosboton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/GrisOscuro"
            android:text="@string/tus_datos"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/settingsImage"
            android:layout_width="80dp"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/settings_image"
            android:src="@drawable/baseline_settings_24" />

        <Button
            android:id="@+id/ajustesboton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/GrisOscuro"
            android:text="@string/ajustes"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoutImage"
            android:layout_width="80dp"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/logout_image"
            android:src="@drawable/baseline_logout_24" />

        <Button
            android:id="@+id/button_log_out"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/GrisOscuro"
            android:text="@string/cerrar_sesion"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>