<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_forgot_password"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/forgot_password_icon"
        android:src="@drawable/baseline_lock_24" />

    <TextView
        android:id="@+id/text_view_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/forgot_password_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_view_forgot_password"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:fontFamily="@font/asap"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_email"
        android:layout_marginStart="32dp"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="29dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/primary_title"
        android:fontFamily="@font/asap_bold"
        android:text="@string/reset_password_button_text"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/btn_return"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_reset_password"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/asap_bold"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/btn_back"
        android:textColor="@color/primary_title"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
